@@ -28,24 +28,31 @@ if "%OS%" == "Windows_NT" (
 ) else (
   set DIRNAME=.\
 )
-
-rem Read command-line args.
-:READ-ARGS
-if "%1" == "" (
-   goto MAIN
-) else if "%1" == "--debug" (
-   goto READ-DEBUG-PORT
-) else (
-   rem This doesn't work as Windows splits on = and spaces by default
-   rem set SERVER_OPTS=%SERVER_OPTS% %1
-   shift
-   goto READ-ARGS
+setlocal EnableDelayedExpansion
+rem check for the security manager system property
+echo(!SERVER_OPTS! | findstr /r /c:"-Djava.security.manager" > nul
+if not errorlevel == 1 (
+    echo ERROR: The use of -Djava.security.manager has been removed. Please use the -secmgr command line argument or SECMGR=true environment variable.
+    GOTO :EOF
 )
+setlocal DisableDelayedExpansion
+
+rem Read command-line args, the ~ removes the quotes from the parameter
+:READ-ARGS
+if "%~1" == "" (
+   goto MAIN
+) else if "%~1" == "--debug" (
+   goto READ-DEBUG-PORT
+) else if "%~1" == "-secmgr" (
+   set SECMGR=true
+)
+shift
+goto READ-ARGS
 
 :READ-DEBUG-PORT
 set "DEBUG_MODE=true"
 set DEBUG_ARG="%2"
-if not "x%DEBUG_ARG" == "x" (
+if not %DEBUG_ARG% == "" (
    if x%DEBUG_ARG:-=%==x%DEBUG_ARG% (
       shift
       set DEBUG_PORT=%DEBUG_ARG%
@@ -101,56 +108,6 @@ if "%DEBUG_MODE%" == "true" (
 )
 
 set DIRNAME=
-
-rem Setup JBoss specific properties
-
-rem Setup directories, note directories with spaces do not work
-set "CONSOLIDATED_OPTS=%JAVA_OPTS% %SERVER_OPTS%"
-:DIRLOOP
-echo(%CONSOLIDATED_OPTS% | findstr /r /c:"^-Djboss.server.base.dir" > nul && (
-  for /f "tokens=1,2* delims==" %%a IN ("%CONSOLIDATED_OPTS%") DO (
-    for /f %%i IN ("%%b") DO set "JBOSS_BASE_DIR=%%~fi"
-  )
-)
-echo(%CONSOLIDATED_OPTS% | findstr /r /c:"^-Djboss.server.config.dir" > nul && (
-  for /f "tokens=1,2* delims==" %%a IN ("%CONSOLIDATED_OPTS%") DO (
-    for /f %%i IN ("%%b") DO set "JBOSS_CONFIG_DIR=%%~fi"
-  )
-)
-echo(%CONSOLIDATED_OPTS% | findstr /r /c:"^-Djboss.server.log.dir" > nul && (
-  for /f "tokens=1,2* delims==" %%a IN ("%CONSOLIDATED_OPTS%") DO (
-    for /f %%i IN ("%%b") DO set "JBOSS_LOG_DIR=%%~fi"
-  )
-)
-
-for /f "tokens=1* delims= " %%i IN ("%CONSOLIDATED_OPTS%") DO (
-  if %%i == "" (
-    goto ENDDIRLOOP
-  ) else (
-    set CONSOLIDATED_OPTS=%%j
-    GOTO DIRLOOP
-  )
-)
-
-:ENDDIRLOOP
-
-rem Set default module root paths
-if "x%JBOSS_MODULEPATH%" == "x" (
-  set  "JBOSS_MODULEPATH=%JBOSS_HOME%\modules"
-)
-
-rem Set the standalone base dir
-if "x%JBOSS_BASE_DIR%" == "x" (
-  set  "JBOSS_BASE_DIR=%JBOSS_HOME%\standalone"
-)
-rem Set the standalone log dir
-if "x%JBOSS_LOG_DIR%" == "x" (
-  set  "JBOSS_LOG_DIR=%JBOSS_BASE_DIR%\log"
-)
-rem Set the standalone configuration dir
-if "x%JBOSS_CONFIG_DIR%" == "x" (
-  set  "JBOSS_CONFIG_DIR=%JBOSS_BASE_DIR%\configuration"
-)
 
 rem Setup JBoss specific properties
 set "JAVA_OPTS=-Dprogram.name=%PROGNAME% %JAVA_OPTS%"
@@ -212,7 +169,68 @@ if exist "%JBOSS_HOME%\jboss-modules.jar" (
   goto END
 )
 
+rem Setup JBoss specific properties
 
+rem Setup directories, note directories with spaces do not work
+setlocal EnableDelayedExpansion
+set "CONSOLIDATED_OPTS=%JAVA_OPTS% %SERVER_OPTS%"
+set baseDirFound=false
+set configDirFound=false
+set logDirFound=false
+for %%a in (!CONSOLIDATED_OPTS!) do (
+   if !baseDirFound! == true (
+      set "JBOSS_BASE_DIR=%%~a"
+      set baseDirFound=false
+   )
+   if !configDirFound! == true (
+      set "JBOSS_CONFIG_DIR=%%~a"
+      set configDirFound=false
+   )
+   if !logDirFound! == true (
+      set "JBOSS_LOG_DIR=%%~a"
+      set logDirFound=false
+   )
+   if "%%~a" == "-Djboss.server.base.dir" (
+       set baseDirFound=true
+   )
+   if "%%~a" == "-Djboss.server.config.dir" (
+       set configDirFound=true
+   )
+   if "%%~a" == "-Djboss.server.log.dir" (
+       set logDirFound=true
+   )
+)
+
+rem If the -Djava.security.manager is found, enable the -secmgr and include a bogus security manager for JBoss Modules to replace
+echo(!JAVA_OPTS! | findstr /r /c:"-Djava.security.manager" > nul && (
+    echo ERROR: The use of -Djava.security.manager has been removed. Please use the -secmgr command line argument or SECMGR=true environment variable.
+    GOTO :EOF
+)
+setlocal DisableDelayedExpansion
+
+rem Set default module root paths
+if "x%JBOSS_MODULEPATH%" == "x" (
+  set  "JBOSS_MODULEPATH=%JBOSS_HOME%\modules"
+)
+
+rem Set the standalone base dir
+if "x%JBOSS_BASE_DIR%" == "x" (
+  set  "JBOSS_BASE_DIR=%JBOSS_HOME%\standalone"
+)
+rem Set the standalone log dir
+if "x%JBOSS_LOG_DIR%" == "x" (
+  set  "JBOSS_LOG_DIR=%JBOSS_BASE_DIR%\log"
+)
+rem Set the standalone configuration dir
+if "x%JBOSS_CONFIG_DIR%" == "x" (
+  set  "JBOSS_CONFIG_DIR=%JBOSS_BASE_DIR%\configuration"
+)
+
+rem Set the module options
+set "MODULE_OPTS="
+if "%SECMGR%" == "true" (
+    set "MODULE_OPTS=-secmgr"
+)
 
 echo ===============================================================================
 echo.
@@ -233,8 +251,8 @@ rem if x%XLOGGC% == x (
    "-Dorg.jboss.boot.log.file=%JBOSS_LOG_DIR%\server.log" ^
    "-Dlogging.configuration=file:%JBOSS_CONFIG_DIR%/logging.properties" ^
       -jar "%JBOSS_HOME%\jboss-modules.jar" ^
+      %MODULE_OPTS% ^
       -mp "%JBOSS_MODULEPATH%" ^
-      -jaxpmodule "javax.xml.jaxp-provider" ^
        org.jboss.as.standalone ^
       "-Djboss.home.dir=%JBOSS_HOME%" ^
        %SERVER_OPTS%
@@ -243,8 +261,8 @@ rem ) else (
    rem "-Dorg.jboss.boot.log.file=%JBOSS_LOG_DIR%\server.log" ^
    rem "-Dlogging.configuration=file:%JBOSS_CONFIG_DIR%/logging.properties" ^
       rem -jar "%JBOSS_HOME%\jboss-modules.jar" ^
+      rem %MODULE_OPTS% ^
       rem -mp "%JBOSS_MODULEPATH%" ^
-      rem -jaxpmodule "javax.xml.jaxp-provider" ^
       rem org.jboss.as.standalone ^
       rem "-Djboss.home.dir=%JBOSS_HOME%" ^
       rem %SERVER_OPTS%
